fix password reset panel spacing

--- a/client/src/css/panel.css
+++ b/client/src/css/panel.css
@@ -24,7 +24,9 @@
 .PasswordResetPanel {
   align-items: center;
   .VisavInput{
-    min-width: 200px;
+    min-width: 250px;
+    width: 100%;
+    margin: 10px 0px 20px 0px;
   }
 }
 
